// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Discover component should be rendered correctly with apps 1`] = `
<div
  className="sto-discover"
>
  <div>
    <h2
      className="sto-discover-title"
    >
      Discover
    </h2>
    <div
      className="sto-discover-get-started"
    >
      <h3
        className="sto-discover-get-started-title"
      >
        Get started with Cozy
      </h3>
      <div
        className="sto-discover-get-started-list"
      >
        <SmallAppItem
          developer={
            Object {
              "name": "Cozy",
            }
          }
          editor="Cozy"
          icon="<svg></svg>"
          installed={true}
          name="Collect"
          onClick={[Function]}
          slug="collect"
          version="3.0.0"
        />
        <SmallAppItem
          developer={
            Object {
              "name": "Cozy",
            }
          }
          editor="Cozy"
          icon="<svg></svg>"
          installed={undefined}
          name="Photos"
          onClick={[Function]}
          slug="photos"
          version="3.0.0"
        />
        <SmallAppItem
          developer={Object {}}
          editor=""
          icon="<svg></svg>"
          installed={undefined}
          name="Tasky"
          onClick={[Function]}
          slug="tasky"
          version="1.0.0"
        />
      </div>
    </div>
  </div>
  <withRouter(ApplicationRouting)
    apps={
      Array [
        Object {
          "developer": Object {
            "name": "Cozy",
          },
          "editor": "Cozy",
          "icon": "<svg></svg>",
          "installed": true,
          "isInRegistry": true,
          "name": "Collect",
          "related": "http://collect.cozy.mock/",
          "slug": "collect",
          "uninstallable": false,
          "version": "3.0.0",
          "versions": Object {
            "beta": Array [
              "3.0.0",
            ],
            "dev": Array [
              "3.0.0",
            ],
            "stable": Array [
              "3.0.0",
            ],
          },
        },
        Object {
          "developer": Object {
            "name": "Cozy",
          },
          "editor": "Cozy",
          "icon": "<svg></svg>",
          "isInRegistry": true,
          "name": "Photos",
          "slug": "photos",
          "uninstallable": true,
          "versions": Object {
            "beta": Array [
              "3.0.0",
            ],
            "dev": Array [
              "3.0.0",
            ],
            "stable": Array [
              "3.0.0",
            ],
          },
        },
        Object {
          "icon": "<svg></svg>",
          "isInRegistry": true,
          "name": "Tasky",
          "slug": "tasky",
          "uninstallable": true,
          "versions": Object {
            "beta": Array [
              "1.0.0",
            ],
            "dev": Array [
              "1.0.0",
            ],
            "stable": Array [
              "1.0.0",
            ],
          },
        },
      ]
    }
    installApp={undefined}
    isFetching={false}
    isInstalling={undefined}
    parent="discover"
    uninstallApp={undefined}
  />
</div>
`;

exports[`Discover component should display error from props correctly 1`] = `
<div
  className="sto-discover"
>
  <div>
    <h2
      className="sto-discover-title"
    >
      Discover
    </h2>
    <div
      className="sto-discover-get-started"
    >
      <h3
        className="sto-discover-get-started-title"
      >
        Get started with Cozy
      </h3>
      <div
        className="sto-discover-get-started-list"
      >
        <p
          className="coz-error"
        >
          This is a test error
        </p>
      </div>
    </div>
  </div>
  <withRouter(ApplicationRouting)
    apps={Array []}
    installApp={undefined}
    isFetching={false}
    isInstalling={undefined}
    parent="discover"
    uninstallApp={undefined}
  />
</div>
`;

exports[`Discover component should render correctly a spinner if apps is fetching 1`] = `
<div
  className="sto-discover"
>
  <div>
    <h2
      className="sto-discover-title"
    >
      Discover
    </h2>
    <div
      className="sto-discover-get-started"
    >
      <h3
        className="sto-discover-get-started-title"
      >
        Get started with Cozy
      </h3>
      <div
        className="sto-discover-get-started-list"
      />
    </div>
  </div>
  <withRouter(ApplicationRouting)
    apps={Array []}
    installApp={undefined}
    isFetching={true}
    isInstalling={undefined}
    parent="discover"
    uninstallApp={undefined}
  />
  <_translate
    loadingType="appsFetching"
    middle="true"
    size="xxlarge"
  />
</div>
`;
